Update all issues for tests